Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90373

Cannot write function to var property through alias

XMLWordPrintable

    • 65b88e61a5a67a0377b375b444fa4fb2a4c9f2b5 (qt/qtdeclarative/dev)

      It is possible to assign functions to var properties, however when doing so through an alias property we get Error: Cannot assign JavaScript function to QVariant

        1. minimal.qml
          0.2 kB
          Fabian Kosmale
        For Gerrit Dashboard: QTBUG-90373
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes