tests/auto/qml/qqmlecmascript/data/assignFunctionThroughAliasToVarProperty.qml
@@ -1,0 +1,9 @@
+import QtQuick 2.15
+
+Item {
+  id: root
+  property alias bar: root.foo
+  property var foo: function() { return false }
+
+  Component.onCompleted: root.bar = function() { return true }
+}
